# Aster

./: .gitmodules  CMakeLists.txt  README.md  shadertoolsconfig.json  xmake.lua
benchmarks/: CMakeLists.txt  main.cpp
src/aster/: CMakeLists.txt  camera.ecs.cpp  camera.gen.cpp  events.h  main.cpp
src/aster/ecs/: gui.ecs.cpp  gui.gen.cpp  test_misc.ecs.cpp  test_misc.gen.cpp  test_query.ecs.cpp  test_query.gen.cpp
src/aster/shaders/: compile_shaders_spirv.bat
src/engine/: CMakeLists.txt  assert.cpp  assert.h  debug_marks.h  eastl_memory.cpp  engine.cpp  engine.h  events.h  events_render.h  level.cpp  level.h  log.cpp  log.h  math.cpp  math.h  settings.cpp  settings.h  time.cpp  time.h  types.h  window.cpp  window.h
src/engine/algorithm/: hash.h  hash_concepts.hpp
src/engine/assets/: CMakeLists.txt  asset_storage.cpp  asset_storage.h  assets_manager.cpp  assets_manager.h  bvh.cpp  bvh.h  gltf.cpp  mesh.h  texture.cpp  vertex.h
src/engine/components/: CMakeLists.txt  atmosphere.cpp  atmosphere.h  camera.ecs.cpp  camera.gen.cpp  camera.h  decal.ecs.cpp  decal.gen.cpp  decal.h  point_light.cpp  point_light.ecs.cpp  point_light.gen.cpp  point_light.h  sky_box_component.h  static_mesh.ecs.cpp  static_mesh.gen.cpp  static_mesh.h  static_mesh_component.h  sun.cpp  sun.h  terrain.cpp  terrain.h  transform.cpp  transform.ecs.cpp  transform.gen.cpp  transform.h
src/engine/console/: CMakeLists.txt  cmd.cpp  cmd.h  cmd.inc.hpp  console.cpp  console.h  hash.h  manager.cpp  manager.h
src/engine/data/: CMakeLists.txt  concept.h  custom_type_registry.cpp  custom_type_registry.h  data.cpp  data.h  ed.cpp  ed.h  types.h  utils.cpp  utils.h
src/engine/datablock/: CMakeLists.txt  datablock.cpp  datablock.h  utils.cpp  utils.h
src/engine/ecs/: CMakeLists.txt  archetype.cpp  archetype.h  archetype_constructor.cpp  archetype_constructor.h  archetype_searcher.cpp  archetype_searcher.h  archetype_storage.h  components.cpp  components.h  components_accessor.cpp  components_accessor.h  components_accessor.inc.hpp  core_types.h  ecs.cpp  ecs.h  ecs_events.h  eid.cpp  eid.h  entity_cb.h  entity_component_init.cpp  entity_component_init.h  entity_components.cpp  entity_components.h  entity_initializer.h  entity_storage.cpp  entity_storage.h  events.h  events_queue.cpp  events_queue.hpp  events_queue.inc.hpp  hash.h  hashed_string.h  macros.h  query.cpp  query.h  query.inc.hpp  registered_component.cpp  registered_component.h  registry.cpp  (+14 more)
src/engine/editor/: CMakeLists.txt  editor.cpp  editor.h
src/engine/fs/: CMakeLists.txt  file_watch.cpp  file_watch.h  vfs.cpp  vfs.h
src/engine/gapi/: CMakeLists.txt  cmd_encoder.cpp  cmd_encoder.h  commands.h  gapi.cpp  gapi.h  resource.cpp  resource_wrappers.cpp  resource_wrappers.h  resources.h  utils.h
src/engine/gui/: CMakeLists.txt  behavior.cpp  behavior.h  bhv_button.cpp  constants.h  element.cpp  element.h  element_tree_builder.cpp  element_tree_builder.h  gui.cpp  gui.h  input_module.cpp  log_module.cpp  point.cpp  point.h  react_state.cpp  react_state.h  react_state_registration.cpp  react_state_registration.h  react_states_storage.cpp  react_states_storage.h  runtime_state.h  scene.cpp  scene.h  scene_placer.cpp  scene_placer.h  scene_tree_builder.cpp  scene_tree_builder.h  timer.cpp  timer.h  ui_module.cpp
src/engine/input/: CMakeLists.txt  actions.h  events.h  input.cpp  input.h  input_device_type.h  input_handler.cpp  input_handler.h  input_msg_queue.h  input_router.cpp  input_router.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/engine/materials/: materials.cpp  materials.h  scene_opaque.cpp  storage.h  test_material.cpp  test_materials.h
src/engine/pipelines/: compile_shaders_spirv.bat  dxc_util.py
src/engine/platform/: memory.h
src/engine/qjs/: CMakeLists.txt  array.cpp  array.h  exception.cpp  exception.h  forward_decl.h  function.cpp  function.h  inc.h  module_registration.cpp  module_registration.h  object.cpp  object.h  qjs.h  runtime_state.h  user_state.cpp  user_state.h  value.cpp  value.hpp  vm.cpp  vm.h
src/engine/reflection/: CMakeLists.txt  class.cpp  class.h  field.h  macros.h
src/engine/render/: CMakeLists.txt  blackboard_components.h  clustered_lights.ecs.cpp  clustered_lights.gen.cpp  clustered_lights.h  clustered_render.ecs.cpp  clustered_render.gen.cpp  clustered_render.h  consts.h  debug_text.cpp  debug_text.h  debug_text_queue.cpp  debug_text_queue.h  debug_text_queue.hpp  ecs_utils.ecs.cpp  ecs_utils.gen.cpp  ecs_utils.h  frame_gc.h  gapi.cpp  gapi.h  gui_render.cpp  gui_render.h  imgui.cpp  imgui.h  imgui_render.cpp  imgui_render.h  model_render.ecs.cpp  model_render.gen.cpp  model_render.h  render_settings.ecs.cpp  render_settings.h  resource.cpp  resources.h  show_tex.ecs.cpp  show_tex.gen.cpp  terrain_render.cpp  terrain_render.h  world_render.cpp  world_render.h
src/engine/rendering/: imgui_backend.cpp  imgui_backend.h  renderer.cpp  renderer.h
src/engine/scene/: CMakeLists.txt  blas.cpp  blas.h  object.h  object_utils.cpp  object_utils.h  scene.cpp  scene.h  tlas.cpp  tlas.h
src/engine/shaders/: shaders.blk  shaders.ed  shadertoolsconfig.json
src/engine/shaders_compiler/: constants.h  main.cpp  spirv.cpp  spirv.h
src/engine/tfx/: CMakeLists.txt  tfx.cpp  tfx.h
src/engine/utils/: CMakeLists.txt  bit_capacity.hpp  bits.h  collision.cpp  collision.h  concept.hpp  fixed_pool.hpp  fixed_stack.hpp  fs.cpp  fs.h  macros.h  math.h  pattern_matching.hpp  ranges.hpp  resizable_vector.hpp  spinlock.h  state_tracker.hpp  string.cpp  string.h  string.hpp  string_map.cpp  string_map.h  strong_typedef.h  types_array.hpp
src/engine/vfs/: CMakeLists.txt  file_watch.cpp  vfs.cpp
src/engine/work_cycle/: CMakeLists.txt  camera.h  collect_camera.ecs.cpp  collect_camera.gen.cpp
src/shaders_compiler/: CMakeLists.txt  ast.h  ast_processing_types.cpp  ast_processing_types.h  ast_types.h  bin.h  byte_code.h  compiler.cpp  compiler.h  limits.h  main.cpp  resources.h  scope_processing.cpp  serialization.h  spirv.cpp  spirv.h  technique_processing.cpp
src/tests/: CMakeLists.txt  main.cpp
(+556 files in other folders)
