cmake_minimum_required(VERSION 3.21)

SET(tests_src
  "${CMAKE_SOURCE_DIR}/src/tests/engine_data/base.cpp"
  "${CMAKE_SOURCE_DIR}/src/tests/main.cpp"
)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(tests ${tests_src})

target_link_libraries(tests
  engine
  GTest::gtest_main
)

set_target_properties(tests PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/tests")
